--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,34 @@
 {
     "python.autoComplete.extraPaths": ["./src", "./src/helpers"],
-    "python.analysis.extraPaths":["./src", "./src/helpers"]
+    "python.analysis.extraPaths": [
+        "./src",
+        "./src/helpers"
+    ],
+    "python.analysis.packageIndexDepths": [
+
+        {
+            "name": "sklearn",
+            "depth": 2
+        },
+        {
+            "name": "matplotlib",
+            "depth": 2
+        },
+        {
+            "name": "scipy",
+            "depth": 2
+        },
+        {
+            "name": "django",
+            "depth": 2
+        },
+        {
+            "name": "flask",
+            "depth": 2
+        },
+        {
+            "name": "fastapi",
+            "depth": 2
+        }
+    ]
 }
